Thu May 21 16:52:44 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c (rb_method_get_iseq): rename to rb_method_iseq.

	* iseq.c: catch up this fix.

	* iseq.h: commit ditto.

Thu May 21 15:41:45 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/net/telnet.rb: gemify net-telnet.
	  [Feature #11083]
	* gems/bundled_gems: added net-telnet to bundled gems.

Thu May 21 15:37:32 2015  Zachary Scott  <e@zzak.io>

        * vm_method.c: Remove private attribute warning [Bug #10967]
          Patch by @spastorino [Fixes GH-849]
          https://github.com/ruby/ruby/pull/849

        * test/ruby/test_module.rb: Update test for changes

Thu May 21 10:59:43 2015  Koichi Sasada  <ko1@atdot.net>

	* proc.c (method_proc): rename to method_to_proc.

Thu May 21 10:51:54 2015  Jake Worth  <jakeworth82@gmail.com>

	* io.c (rb_f_select): [DOC] Fixes for grammar and style.
	  [Fix GH-906]

Thu May 21 08:25:19 2015  Eric Wong  <e@80x24.org>

	* variable.c (Init_var_tables): init generic_iv_tbl
	  (rb_generic_ivar_table, generic_ivar_get, generic_ivar_set,
	   generic_ivar_defined, generic_ivar_remove,
	   rb_mark_generic_ivar, givar_i, rb_mark_generic_ivar_tbl,
	   rb_free_generic_ivar, rb_copy_generic_ivar, rb_ivar_foreach,
	   rb_ivar_count): remove checks for uninitialize generic_iv_tbl
	[ruby-core:69155] [Feature #11146]

Thu May 21 04:11:03 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (exception_type2symbol): show correct bug message.

Wed May 20 23:19:05 2015  Yusuke Endoh  <mame@ruby-lang.org>

	* lib/base64.rb: Fix rdoc-formatting for padding argument.
	  [fix GH-905][ci skip] Patch by @davydovanton

Wed May 20 13:16:23 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (DEPRECATED_BY): deprecate warning with preferable
	  alternative.

	* configure.in (RUBY_FUNC_ATTRIBUTE): allow attribute arguments in
	  the macro.

Wed May 20 11:23:24 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_dump.c (rb_print_backtrace): return value of libexec's backtrace